# gi-base

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  compose.yaml  pyproject.toml
app/: cache.py  database.py  enums.py  main.py  models.py  schemas.py  settings.py
app/api/: router.py
app/api/main/: router.py
app/api/materials/: router.py  services.py
app/api/weapons/: router.py  services.py
app/cache/: __init__.py  decorator.py  key_builder.py  types.py
app/cache/backends/: redis.py
migrations/: env.py
